// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InfiniteHits renders markup with state 1`] = `
<ng-ais-infinite-results
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-InfiniteResults"
  >
    
        
    <div
      class="ais-InfiniteResults-body ais-body"
    >
      
          
      
      
  
          
      
          
      
      <div>
        
            
        <ul
          class="ais-InfiniteResults-list"
        >
          
              
          
          <li
            class="ais-InfiniteResults-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span
                class="ais-Highlight"
              >
                foo
              </span>
            </ng-ais-highlight>
            
              
          </li>
          <li
            class="ais-InfiniteResults-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span
                class="ais-Highlight"
              >
                bar
              </span>
            </ng-ais-highlight>
            
              
          </li>
          <li
            class="ais-InfiniteResults-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span
                class="ais-Highlight"
              >
                foobar
              </span>
            </ng-ais-highlight>
            
              
          </li>
          <li
            class="ais-InfiniteResults-item"
          >
            
                
            <ng-ais-highlight
              attributename="name"
              ng-reflect-attribute-name="name"
              ng-reflect-hit="[object Object]"
            >
              <span
                class="ais-Highlight"
              >
                barfoo
              </span>
            </ng-ais-highlight>
            
              
          </li>
          
            
        </ul>
        
          
      </div>
      
  
          
      <button
        class="ais-InfiniteResults-showMore"
      >
        
            Show more results
          
      </button>
      
        
    </div>
    
      
  </div>
    
</ng-ais-infinite-results>
`;

exports[`InfiniteHits renders markup without state 1`] = `
<ng-ais-infinite-results
  cx={[Function Function]}
  platformId={[Function String]}
  searchInstance={[Function NgAisInstance]}
  showMoreLabel={[Function String]}
  state={[Function Object]}
  template="undefined"
  updateState={[Function Function]}
>
  
      <div
    class="ais-InfiniteResults"
  >
    
        
    <div
      class="ais-InfiniteResults-body ais-body"
    >
      
          
      
      
  
          
      
          
      
      <div>
        
            
        <ul
          class="ais-InfiniteResults-list"
        >
          
              
          
          
            
        </ul>
        
          
      </div>
      
  
          
      <button
        class="ais-InfiniteResults-showMore"
      >
        
            Show more results
          
      </button>
      
        
    </div>
    
      
  </div>
    
</ng-ais-infinite-results>
`;
